# sdl2-snake

./: .gitignore  LICENSE  README.md  package.yaml  sdl2-snake.cabal  stack.yaml
app/: Main.hs
src/: Snake.hs
