cabal-version: 2.4
name:           sdl2-snake
version:        0.1.0.0
author:         Gil Mizrahi
maintainer:     gilmi@posteo.net
copyright:      2020 Gil Mizrahi
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , random
    , sdl2 >= 2.0 && <3
  exposed-modules:
      Snake
  other-modules:
      Paths_sdl2_snake
  default-language: Haskell2010

executable app
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base
    , random
    , sdl2
    , sdl2-snake
  default-language: Haskell2010
